--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    hola 
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sneakers</title>
+  </head>
+
+  <body>
+    <h1>Las ultimos ingresos de Nike en Argentina</h1>
+    <h2></h2>
+    <img src="./imagenes/J1 TRAVIS.webp" width="500" height="300" />
+    <ul>
+      <li>J1</li>
+      <li>J1 Low</li>
+      <li>J2 High</li>
+      <li>Dunk</li>
+      <li>Air Force</li>
+    </ul>
+
+    <main>En esta pagina podremos ver y analizar los siguientes lanzamientos que tiene planeado Nike Argentina.</main>
+  <span>aaaaaa</span>
 </body>
 </html>
