--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
 
   <body>
-    <h1>Las ultimos ingresos de Nike en Argentina</h1>
+    <h1>titulo principal</h1>
     <h2></h2>
-    <img src="./imagenes/J1 TRAVIS.webp" width="500" height="300" />
+    <img src="imagenes/J1 TRAVIS.webp" width="10" height="10" />
     <ul>
       <li>J1</li>
       <li>J1 Low</li>
@@ -21,5 +21,17 @@
 
     <main>En esta pagina podremos ver y analizar los siguientes lanzamientos que tiene planeado Nike Argentina.</main>
   <span>aaaaaa</span>
+
+  <table>
+    <tr><th>nombre</th><th>Apellido</th></tr>
+    <tr><td>carlos</td><td>Arana</td></tr>
+  </table>
+  <form action="" method="get">
+    <label for="forname">nombre:</label>
+    <input type="text" name="falso enviar">
+    <input type="button" value="enviar">
+    <input type="submit" value="enviar">
+  </form>
+
 </body>
 </html>
