--- a/pagina/index.html
+++ b/pagina/index.html
@@ -6,29 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sneakers</title>
     <link rel="stylesheet" href="stylee.css" />
+
+    <div class="header">
+      <h1>Sneakers</h1>
+    </div> 
+
+
+
   </head>
 
   <body>
-    <h1>Sneakers</h1>
+      <ul>
+        <li>
+          <a
+            class="active"
+            href="file:///C:/Users/jjoaq/OneDrive/Escritorio/PAGINA-WEB/pagina/index.html"
+            >Inicio</a
+          >
+        </li>
+        <li><a href="#news">News</a></li>
+        <li><a href="https://www.instagram.com/joaco_arana">Redes Sociales</a></li>
+        <li style="float: right"><a href="#about">Registrarte</a></li>
+      </ul>
+
+    <a href="https://www.nike.com/ar/" target="_blank">NIKE Argentina</a>
     <img src="imagenes/J1 TRAVIS.webp" width="150" height="150" />
     <ul>
       <h2 id="titular">Modelos</h2>
       <li>
-        Jordan 1 
-        Uno de los modelos mas conocidos en el mundo del streetwear,
-        con un numero de "Colorways" enorme. La silueta que le pertence a Nike,
+        Jordan 1 Uno de los modelos mas conocidos en el mundo del streetwear,
+        con un numero de Colorways enorme. La silueta que le pertence a Nike,
         tiene una amplia, numerosa y exclusiva cantidad de colaboraciones no
         solo con marcas exclusivas como Dior o Off-White,sino tambien con
         artistas urbanos como J Balvin o, el famosos trapero estadounidense,
-        Travis Scott. Esta silueta es la mas hypeada de toda la marca. 
-        
-      
-        Uno de los problemas que tiene nuestro pais, es que la gran mayoria de
+        Travis Scott. Esta silueta es la mas hypeada de toda la marca. Uno de
+        los problemas que tiene nuestro pais, es que la gran mayoria de
         colorways y colaboraciones no llegan. Esto puede ser por el alto costo
         que puede llegar a tener la importacion del par, por temas economicos de
         Nike Argentina o porque el poder adquisitivo de la gente no esta en las
         expectativas de la marca.
       </li>
+
       <li>J1 Low</li>
       <li>J2 High</li>
       <li>Dunk</li>
@@ -42,21 +60,16 @@
     </main>
     <span>aaaaaa</span>
 
-    <table>
-      <tr>
-        <th>nombre</th>
-        <th>Apellido</th>
-      </tr>
-      <tr>
-        <td>carlos</td>
-        <td>Arana</td>
-      </tr>
-    </table>
     <form action="" method="get">
       <label for="forname">nombre:</label>
       <input type="text" name="falso enviar" />
       <input type="button" value="enviar" />
       <input type="submit" value="enviar" />
     </form>
+
+    <div class="footer">
+      <p>Datos legales de la pagina</p>
+    </div>
+
   </body>
 </html>
