--- a/pagina/index.html
+++ b/pagina/index.html
@@ -16,11 +16,6 @@
   </head>
 
   <body>
-
-    <H3>LO ARREGLE</H3>
-    <li>hola como estadounidens</li>
-
-    
       <ul>
         <li>
           <a
@@ -61,7 +56,7 @@
 
     <main>
       En esta pagina podremos ver y analizar los siguientes lanzamientos que
-      tiene planeado Nike Argentina.
+      tiene planeado Nike Argentina y de adidas
     </main>
     <span>aaaaaa</span>
 
